# manga_back

./: .config  .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  manage.py  pyproject.toml  recod  recod.txt  requirements.txt
common/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
common/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0003_rating.py  0004_delete_rating.py  0005_mangarating.py
common/service/: service.py
common/tests/: tests_model.py  tests_service.py
config/: .black  .flake8  .isort.cfg
manga/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
manga/migrations/: 0001_initial.py  0002_alter_manga_review_alter_tags_tag_name.py  0002_alter_page_chapter.py  0002_remove_manga_average_rating_and_more.py  0003_chapter_time_prod.py  0003_remove_categorys_slug_manga_decency_and_more.py  0004_alter_manga_english_only_field.py  0005_alter_chapter_volume.py
manga/service/: service.py
manga/tests/: tests_model.py  tests_service.py
manga_back/: asgi.py  constants.py  service.py  settings.py  urls.py  wsgi.py
users/: admin.py  email_url.py  forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers_alter_customuser_gender.py  0003_alter_customuser_managers_alter_customuser_birthdate_and_more.py  0004_remove_customuser_first_name_and_more.py  0005_alter_mangalist_name.py  0006_alter_mangalist_user.py  0007_alter_mangalist_name.py  0008_alter_customuser_gender.py
users/service/: service.py  (+1 more)
(+7 files in other folders)
