[project]
name = "manga-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.1",
    "beautifulsoup4==4.13.4",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "cryptography==45.0.6",
    "dj-rest-auth==7.0.1",
    "django==5.2.5",
    "django-allauth==65.11.0",
    "django-cors-headers==4.7.0",
    "django-filter==25.1",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "idna==3.10",
    "mccabe==0.7.0",
    "mypy-extensions==1.1.0",
    "oauthlib==3.3.1",
    "packaging==25.0",
    "pathspec==0.12.1",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "pycodestyle==2.14.0",
    "pycparser==2.22",
    "pyflakes==3.4.0",
    "pyjwt==2.10.1",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "soupsieve==2.7",
    "sqlparse==0.5.3",
    "typing-extensions==4.14.1",
    "urllib3==2.5.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
    "ruff>=0.12.9",
]


[tool.ruff]

line-length = 120

exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__",
    "manage.py"
]

target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "I",
    "UP",
    "N",
    "F",
    "B",
    "Q",
    "DJ",
    "RUF",
    ]
ignore = ["RUF012"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"urls.py" = ["RUF005"]
